--- a/scss/main.scss
+++ b/scss/main.scss
@@ -45,7 +45,7 @@ body {
           background-color: #514f59;
           .triangle {
             font-size: 100px;
-            color: #c4c4c4;
+            color: #000000;
           }
         }
       }
