--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,14 +9,26 @@ body {
     box-sizing: border-box;
     font-family: sans-serif;
   }
-  .toggler {
+  .login-toggler {
     display: none;
     transition: all 1.5s ease-in-out;
+  }
+  .signup-toggler {
+    display: none;
+    transition: all 1.5s ease-in-out;
+  }
+  .home-toggler {
+    display: none;
+    transition: all 1.5s ease-in-out;
+  }
+  .cursor {
+    cursor: pointer;
   }
   button {
     background: none;
     border: none;
   }
+
   body {
     display: flex;
     justify-content: center;
@@ -38,6 +50,10 @@ body {
         border-radius: 71px;
         p {
           font-size: 83px;
+          a {
+            text-decoration: none;
+            color: #e5d4ed;
+          }
         }
         // This is the button /////////////////////////////////////
         .rectangle {
@@ -76,6 +92,7 @@ body {
         }
       }
     }
+    // this is the log in
     .login {
       opacity: 0;
       .container_login {
@@ -89,9 +106,13 @@ body {
 
         border-radius: 71px;
         padding-top: 20px;
-        p {
+        .goBackHome {
           font-size: 83px;
-          margin-bottom: 70px;
+          margin-bottom: 20px;
+        }
+        span {
+          margin-bottom: 20px;
+          font-size: 40px;
         }
         // this is the styles for the form fields
         .login-form {
@@ -108,6 +129,13 @@ body {
             border-radius: 15px;
             border: none;
             background-color: #c4c4c4;
+            font-size: 24px;
+            padding: 0 10px;
+            text-align: center;
+            outline: none;
+            &:focus {
+              box-shadow: 0 0 3pt 2pt #1d1128;
+            }
           }
         }
         .options2 {
@@ -117,7 +145,7 @@ body {
           display: flex;
           align-items: flex-end;
           flex-direction: row;
-          justify-content: space-between;
+          justify-content: center;
           a {
             color: #e5d4ed;
             font-size: 1rem;
@@ -139,6 +167,84 @@ body {
           font-size: 75px;
           color: #c4c4c4;
         }
+      }
+    }
+  }
+  // this is the sign up////////////////////////////////////
+  .signup {
+    opacity: 0;
+    .container_signup {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      background-color: #5941a9;
+      color: #e5d4ed;
+      height: 633px;
+      width: 533px;
+
+      border-radius: 71px;
+      padding-top: 20px;
+      .goBackHome {
+        font-size: 83px;
+        margin-bottom: 20px;
+      }
+      span {
+        margin-bottom: 20px;
+        font-size: 40px;
+      }
+      // this is the styles for the form fields
+      .signup-form {
+        ::placeholder {
+          font-size: 1.2rem;
+          padding-left: 20px;
+          opacity: 1;
+          color: black;
+        }
+        #userName,
+        #password,
+        #email {
+          font-size: 24px;
+          padding: 0 10px;
+          text-align: center;
+          width: 372px;
+          height: 59px;
+          border-radius: 15px;
+          border: none;
+          background-color: #c4c4c4;
+          outline: none;
+          &:focus {
+            box-shadow: 0 0 3pt 2pt #1d1128;
+          }
+        }
+      }
+      .options2 {
+        width: 100%;
+        height: 100%;
+        padding: 0 50px;
+        display: flex;
+        align-items: flex-end;
+        flex-direction: row;
+        justify-content: center;
+        a {
+          color: #e5d4ed;
+          font-size: 1rem;
+          margin: 10px;
+        }
+      }
+    }
+
+    // this is the button
+    .rectangle_2 {
+      border-radius: 20px;
+      width: 125px;
+      height: 78px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #6d72c3;
+      .triangle_2 {
+        font-size: 75px;
+        color: #c4c4c4;
       }
     }
   }
